--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="#students">Searching for Students</a></li>
+  <li style="margin-bottom: 1ex;"><a href="#students">Searching for students and young researchers</a></li>
   <!-- <li><a href="">Hammers for Type Theories, HaTT 2016 (PC member)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive Theorem Proving, ITP 2016</a> (PC member)
@@ -120,11 +120,14 @@ Research Cambridge</a>.</p>
 <!--
 <h2 id="new-students">Current Research Projects</h2>
 -->
-<h2 id="students">Searching for Students</h2>
+<h2 id="students">Searching for Students and Young Researchers</h2>
 <p style="width:42em; text-align: left">
-I am looking for talented, highly motivated students, for research
-internships, MSc and PhD theses, etc. Here are three projects to which
-students could contribute:
+
+I am looking for talented, highly motivated students and young
+researchers, for research internships, PhD, PostDoc, and Starting
+Researcher positions. Here are three projects to which students could
+contribute:
+
 </p>
 <!--(but there are many other possible ones):--></p>
 <ul>
