--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ Research Cambridge</a>.</p>
 <p style="width:42em; text-align: left">
 
 I am looking for talented, highly motivated students and young
-researchers, for research internships, PhD, PostDoc, and Starting
-Researcher positions. Here are three projects to which students could
-contribute:
+researchers, for research internships and for PhD, PostDoc, and
+Starting Researcher positions. Here are three projects to which
+students could contribute:
 
 </p>
 <!--(but there are many other possible ones):--></p>
