--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Research Cambridge</a>.</p>
 I am looking for talented, highly motivated students and young
 researchers, for research internships and for PhD, PostDoc, and
 Starting Researcher positions. Here are three projects to which
-students or young researchers could contribute:
+students could contribute:
 
 </p>
 <!--(but there are many other possible ones):--></p>
