--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ Research Cambridge</a>.</p>
 <h2 id="students">Searching for Students and Young Researchers</h2>
 <p style="width:42em; text-align: left">
 
-I am looking for talented, highly motivated students and young
+We are looking for talented, highly motivated students and young
 researchers, for research internships and for PhD, PostDoc, and
-Starting Researcher positions. Here are three projects to which
-students could contribute:
+Researcher positions. Here are three projects to which students could
+contribute:
 
 </p>
 <!--(but there are many other possible ones):--></p>
