--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ Research Cambridge</a>.</p>
 
 We are looking for talented, highly motivated students and young
 researchers, for research internships and for PhD, PostDoc, and
-Researcher positions. Here are three projects to which students could
-contribute:
+Researcher positions. Here are three of my projects to which students
+could contribute:
 
 </p>
 <!--(but there are many other possible ones):--></p>
