--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ MPRI website</a>.</p>
     Maxime Dénès,
     John Hughes,
     Benjamin C. Pierce, and
-    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Submitted to Special Issue of Journal of Functional Programming for ICFP 2013. Revision of July 2015.
+    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Accepted in Special Issue of Journal of Functional Programming for ICFP 2013. To appear. Revision of July 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
