--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,16 @@
 
 <ol style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
+    Leonidas Lampropoulos,
+    Antal Spector-Zabusky,
+    Arthur Azevedo de Amorim,
+    Maxime Dénès,
+    John Hughes,
+    Benjamin C. Pierce, and
+    Dimitrios Vytiniotis. <b><a href="http://arxiv.org/abs/1409.0393">Testing Noninterference, Quickly</a></b>. <a href="http://arxiv.org/abs/1409.0393">arXiv:1409.0393</a>. Accepted in Special Issue of Journal of Functional Programming for ICFP 2013. To appear. Revision of July 2015.
+  </li>
+
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#355;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&amp;pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
   <ul style="font-size: small">
     <li><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Preliminary version</a> appeared in <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.</li>
@@ -142,9 +152,6 @@
     Dimitrios Vytiniotis,
     Arthur Azevedo de Amorim,
     Leonidas Lampropoulos. <b><a href="publications/testing-noninterference-icfp2013.pdf">Testing Noninterference, Quickly</a></b>. In <a href="http://icfpconference.org/icfp2013/">18th ACM SIGPLAN International Conference on Functional Programming (ICFP)</a>. pages 455-468, ACM Press. September 2013.
-  <ul style="font-size: small">
-    <li><a href="publications/testing-noninterference-draft-full.pdf">Long version</a></li>
-  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu, Michael Greenberg, Ben Karel, Benjamin C. Pierce, Greg Morrisett. <b><a href="publications/all-your-ifcexception-oakland2013-full.pdf">All Your IFCException Are Belong To Us</a></b>. In <a href="http://www.ieee-security.org/TC/SP2013/">34th IEEE Symposium on Security and Privacy (Oakland)</a>, pages 3-17, IEEE Computer Society Press, May 2013.
