--- a/index.html
+++ b/index.html
@@ -391,6 +391,14 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
+
+      <li><b>Recent:</b> More Secure Software Systems by
+        Formal Verification, Property-Based Testing, Secure
+        Compilation, and Dynamic Monitoring</a> at scientific
+        committee meeting of Alcatel-Lucent Bell Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
+        (2015-12-15)</li>
+      </li>
+
       <li><b>Recent:</b> <a href="http://cufp.org/2015/">
           Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
       </li>
