--- a/index.html
+++ b/index.html
@@ -390,9 +390,13 @@ MPRI website</a>.</p>
 
   <li><b>Recent:</b> More Secure Software Systems by
     Formal Verification, Property-Based Testing, Secure
-    Compilation, and Dynamic Monitoring</a> at scientific
-    committee meeting of Alcatel-Lucent Bell Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
-    (2015-12-15)</li>
+    Compilation, and Dynamic Monitoring</a> 
+
+    <ul style="font-size: small">
+      <li> Scientific committee meeting of Alcatel-Lucent Bell
+      Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
+      (2015-12-15)</li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
