--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li><b>Recent:</b> More Secure Software Systems by
-    Formal Verification, Property-Based Testing, Secure
+    Formal Verification,<br/>Property-Based Testing, Secure
     Compilation, and Dynamic Monitoring</a> 
 
     <ul style="font-size: small">
