--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li><b>Recent:</b> More Secure Software Systems by
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> More Secure Software Systems by
     Formal Verification,<br/>Property-Based Testing, Secure
     Compilation, and Dynamic Monitoring</a> 
 
