--- a/talks.html
+++ b/talks.html
@@ -24,6 +24,17 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Recent:</b> More Secure Software Systems by
+    Formal Verification,<br/>Property-Based Testing, Secure
+    Compilation, and Dynamic Monitoring</a> 
+
+    <ul style="font-size: small">
+      <li> Scientific committee meeting of Alcatel-Lucent Bell
+      Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
+      (2015-12-15)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>F* tutorial (<a href="https://www.fstar-lang.org/tutorial/">online version</a>)</em>
     <ul style="font-size: small">
 
