--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ MPRI website</a>.</p>
     Compilation, and Dynamic Monitoring</a> 
 
     <ul style="font-size: small">
-      <li> Scientific committee meeting of Alcatel-Lucent Bell
+      <li> Scientific committee meeting of Alcatel-Lucent's Bell
       Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
       (2015-12-15)</li>
     </ul>
