--- a/talks.html
+++ b/talks.html
@@ -29,7 +29,7 @@
     Compilation, and Dynamic Monitoring</a> 
 
     <ul style="font-size: small">
-      <li> Scientific committee meeting of Alcatel-Lucent Bell
+      <li> Scientific committee meeting of Alcatel-Lucent's Bell
       Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
       (2015-12-15)</li>
     </ul>
