--- a/talks.html
+++ b/talks.html
@@ -29,9 +29,10 @@
     Compilation, and Dynamic Monitoring</a> 
 
     <ul style="font-size: small">
-      <li> Scientific committee meeting of Alcatel-Lucent's Bell
-      Labs: <a href="talks/Alcatel-Lucent.pdf">slides</a>
-      (2015-12-15)</li>
+      <li>Invited vision talk at scientific committee meeting of
+          Alcatel- Lucent's Bell Labs<br/>-- Inria common lab
+          (2015): <a href="talks/Alcatel-Lucent.pdf">slides</a>
+          (2015-12-15)</li>
     </ul>
   </li>
 
