--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/papers/mumon/">paper</a>)
-   <ul><li>PhD position available funded through the
-           <a href="http://research.microsoft.com/en-us/collaboration/global/apply-europe.aspx">Microsoft Research PhD Scholarship Programme</a></li>
+   <ul><li>PhD position available (funded through the
+           <a href="http://research.microsoft.com/en-us/collaboration/global/apply-europe.aspx">Microsoft Research PhD Scholarship Programme</a>)</li>
    </ul>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a>
