--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ could contribute:
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/tutorial">tutorial</a>;
  <a href="https://www.fstar-lang.org/papers/mumon/">paper</a>)
-   <ul><li>PhD position available (funded through the
+   <ul><li><b>PhD position available</b> (funded through the
            <a href="http://research.microsoft.com/en-us/collaboration/global/apply-europe.aspx">Microsoft Research PhD Scholarship Programme</a>)</li>
    </ul>
   </li>
