--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="#students">Searching for students and young researchers</a></li>
 
-  <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available</a></li>
+  <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by MSR</a></li>
 
   <!-- <li><a href="">Hammers for Type Theories, HaTT 2016 (PC member)</li> -->
 
