--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@ MPRI website</a>.</p>
 
     <ul style="font-size: small">
       <li>Invited vision talk at scientific committee meeting of
-          Alcatel- Lucent's Bell Labs<br/>-- Inria common lab
-          (2015): <a href="talks/Alcatel-Lucent.pdf">slides</a>
+          Alcatel- Lucent's Bell Labs<br/>-- Inria common lab:
+          <a href="talks/Alcatel-Lucent.pdf">slides</a>
           (2015-12-15)</li>
     </ul>
   </li>
