--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ MPRI website</a>.</p>
 -->
   </li>
   <li><a href="https://github.com/catalin-hritcu">My Github account</a></li>
-  <li><a href="http://hritcu.wordpress.com">My blog (Smiling)</a></li>
+  <li><a href="http://hritcu.wordpress.com">My old blog (Smiling)</a></li>
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
     <li>Spelling my name in LaTeX: <code>C\u{a}t\u{a}lin Hri\c{t}cu</code></li>
     <li>Spelling my name in HTML: <code>C&amp;#259;t&amp;#259;lin Hri&amp;#355;cu</code></li>
