--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Research Cambridge</a>.</p>
   <!-- <li>Submission deadline: October 14, 2015</li> -->
   </ul>
   </li>
-  <li style="margin-bottom: 1ex;"><a href="">Hammers for Type Theories, HaTT 2016 (PC member)</li>
-  <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016 (PC member)</a></li>
+  <li style="margin-bottom: 1ex;"><a href="">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
+  <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
   <li style="margin-bottom: 1ex;">Visiting <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a> and <a href="https://www.cs.washington.edu/research/plse/people">University of Washington</a>, 10 - 28 August 2015
