--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ MPRI website</a>.</p>
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
