--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
-    <li style="margin-top: 1ex;"> PhD student at University of Pennsylvania since 2011, external PhD co-supervisor</li>
+    <li style="margin-top: 1ex;"> PhD student at University of Pennsylvania since 2011, external co-supervisor</li>
     <li style="margin-top: 1ex;">Internship at Inria, 2014-03 to 2014-08:<br/>
       <a href="publications/micropolicies-draft.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
