--- a/index.html
+++ b/index.html
@@ -507,6 +507,8 @@ MPRI website</a>.</p>
 <h2 id="students">Advised Students</h2>
 <ul style="width:42em; text-align: left">
 
+<p>For a complete list of the students I advised please look <a href="students.html">here</a>.</p>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a></li>
@@ -532,56 +534,6 @@ MPRI website</a>.</p>
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="https://www.cis.upenn.edu/~aarthur/">University of Pennsylvania</a>]</div></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
-  <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-04 to 2015-08:
-      <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
-    </li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
-  <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
-      <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a>
-  <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
-  <ul>
-    <li style="margin-top: 1ex;">Internship at Inria, 2014-04 to 2014-09:<br/>
-      <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
-    </li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a>
-  <ul>
-    <li style="margin-top: 1ex;">Master's Thesis, Finished 2011-04-04:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Mechanized Formalization of a Transformation from an Extensible Spi Calculus to Java</a></li>
-    <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[First employment <a href="http://www.de.capgemini.com">Capgemini</a>]</div></li>
-  <li style="margin-bottom: 1ex;"><a href="http://pub.ist.ac.at/~ttarrach/">Thorsten Tarrach</a>
-  <ul>
-    <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a></li>
-    <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[First employment <a href="http://www.troxo.com/">Troxo</a>/<a href="http://www.atomia.com/">Atomia</a>] [Now PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://people.mmci.uni-saarland.de/~mgrochul/">Martin Grochulla</a>
-  <ul>
-    <li style="margin-top: 1ex;">Master's Thesis, Finished 2009-01-06 (co-advised with Matteo Maffei)<br/><a href="students/grochulla/master.pdf">Security Despite System Compromise with Zero-Knowledge Proofs </a></li>
-  </ul>
-  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Now PhD student at the MPI-INF</a>]</div></li>
 </ul>
 
 <h2 id="tools">Software</h2>
