--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ MPRI website</a>.</p>
 
 <h2 id="students">Advised Students</h2>
 
-<p>For a complete list of the students I advised please look <a href="students.html">here</a>.</p>
+<p>Here are my current students. For a complete list of the students I advised in the past please look <a href="students.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
