--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ MPRI website</a>.</p>
       anonymity,
       information flow control,
       access control,
-      integrity protection</li>
+      integrity</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
       rigorous semantics,
