--- a/index.html
+++ b/index.html
@@ -216,13 +216,14 @@ MPRI website</a>.</p>
       integrity</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
-      rigorous semantics,
       type systems,
-      proof assistants,
       verification,
-      automatic testing,
+      proof assistants,
+      property-based testing,
+      semantics,
       formal metatheory,
-      formally certified tools</li>
+      formally certified tools,
+      dynamic enforcement</li>
     <li style="margin-bottom: 1ex;">
       <em>design and verification of security-critical systems</em>:
       microkernel components,
