--- a/index.html
+++ b/index.html
@@ -226,12 +226,9 @@ MPRI website</a>.</p>
       dynamic enforcement</li>
     <li style="margin-bottom: 1ex;">
       <em>design and verification of security-critical systems</em>:
-      microkernel components,
-      electronic voting systems,
-      crypto devices,
-      security-preserving compilers,
-      embedded systems,
-      etc.</li>
+      reference monitors,
+      compilers,
+      microkernels</li>
   </ul>
 
 <h2>Recent Publications and Drafts</h2>
