Separate software page

--- a/index.html
+++ b/index.html
@@ -533,7 +533,10 @@ MPRI website</a>.</p>
 
 </ul>
 
-<h2 id="tools">Software</h2>
+<h2 id="tools">Software tools</h2>
+
+<p>Here are my current software projects. For a complete list of past software please look <a href="software.html">here</a>.</p>
+
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     <a href="https://www.fstar-lang.org">F*: From Program Verification System
@@ -559,27 +562,6 @@ MPRI website</a>.</p>
       (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
        Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce,
        Antal Spector-Zabusky, and Andrew Tolmach)</li>
-
-  <li style="margin-bottom: 1ex;">
-    <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
-      clean-slate co-design of a secure
-      architecture, including novel hardware, operating
-      system, and programming language (~40 people team)</li>
-
-  <li style="margin-bottom: 1ex;">
-    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
-  a programming language with dynamic information flow control 
-  and label-based access control</a> (with
-  Michael Greenberg, Ben Karel,  Benoît Montagu,
-  Greg Morrisett, Benjamin C. Pierce, Jesse A. Tov, and others)</li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a> (with Thorsten Tarrach)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> (by Thorsten Tarrach)</li>
-  <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> (with Gavin Bierman and Andy Gordon)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> (by Alex Busenius)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> (by Martin Grochulla)</li>
-<!--  <li style="margin-bottom: 1ex;"><a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F#: a prototype code generator for security protocols</a> by Thorsten Tarrach</li>-->
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Zero-knowledge type-checker</a> (with Stefan Lorenz, Kim Pecina and Thorsten Tarrach)</li>
 </ul>
 
 <h2>Misc</h2>
