--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ MPRI website</a>.</p>
 <p>For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
 <ul style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Lecture, Saarland University, 16-27 March 2015
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
   </li>
   <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~bcpierce/courses/670Fall12/">Advanced Martial Arts in Coq</a></b>
     - CIS670 at UPenn, Fall 2012.
