--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@ MPRI website</a>.</p>
 
 </ul>
 
-<h2>Recent Teaching</h2>
+<h2>Teaching</h2>
 
-<p>For a complete list of my teaching please look <a href="teaching.html">here</a>.
+<p>Here are my recent courses. For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
