--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ MPRI website</a>.</p>
 </ul>
 
 
-<h2>Recent and Upcoming Talks</h2>
+<h2>Recent <!-- and Upcoming --> Talks</h2>
 <p>For a complete list of my talks please look <a href="talks.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
