--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by MSR</a></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive Theorem Proving, ITP 2016</a> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="">44th ACM SIGPLAN-SIGACT
+    Symposium on Principles of Programming Languages (POPL 2017)</a>
+    (PC member)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
+    Theorem Proving, ITP 2016</a> (PC member)
   <ul>
   <li>Abstract deadline: 29 February, 2016</li>
   <li>Submission deadline: 4 March, 2016</li>
