--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by MSR</a></li>
 
-  <li style="margin-bottom: 1ex;"><a href="">44th ACM SIGPLAN-SIGACT
-    Symposium on Principles of Programming Languages (POPL 2017)</a>
+  <li style="margin-bottom: 1ex;"><a href="">
+    Symposium on Principles of Programming Languages, POPL 2017</a>
     (PC member)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://itp2016.inria.fr/">Interactive
