--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Research Cambridge</a>.</p>
   <!-- <li>Submission deadline: October 14, 2015</li> -->
   </ul>
   </li>
-  <li style="margin-bottom: 1ex;"><a href="">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
