--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="#students">Searching for students and young researchers</a></li>
+  <li style="margin-bottom: 1ex;"><a href="#students">Looking for students and young researchers</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by MSR</a></li>
 
@@ -128,7 +128,7 @@ Research Cambridge</a>.</p>
 <!--
 <h2 id="new-students">Current Research Projects</h2>
 -->
-<h2 id="students">Searching for Students and Young Researchers</h2>
+<h2 id="students">Looking for Students and Young Researchers</h2>
 <p style="width:42em; text-align: left">
 
 We are looking for talented, highly motivated students and young
