--- a/index.html
+++ b/index.html
@@ -290,7 +290,9 @@ MPRI website</a>.</p>
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
-    In 6th International Conference on Interactive Theorem Proving (ITP), 2015.
+    In 6th International Conference on Interactive Theorem Proving (ITP),
+    volume 9236 of Lecture Notes in Computer Science, pages 325-343.
+    Springer, August 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
