--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,9 @@
     Zoe Paraskevopoulou, C&#259;t&#259;lin Hri&#355;cu, Maxime Dénès,
     Leonidas Lampropoulos, and Benjamin C. Pierce.
     <b><a href="https://hal.inria.fr/hal-01162898/document">Foundational Property-Based Testing</a></b>.
-    To appear in ITP 2015. Report of June 2015.
+    In 6th International Conference on Interactive Theorem Proving (ITP),
+    volume 9236 of Lecture Notes in Computer Science, pages 325-343.
+    Springer, August 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">
