--- a/index.html
+++ b/index.html
@@ -328,8 +328,7 @@ MPRI website</a>.</p>
         Architectural Support for Software-Defined Metadata Processing</a></b>.
       In <a href="http://asplos15.bilkent.edu.tr/">
       20th International Conference on Architectural Support for Programming Languages
-      and Operating Systems (ASPLOS 2015)</a>,
-      March 2015.
+      and Operating Systems (ASPLOS)</a>, pages 487-502. ACM, March 2015.
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
