--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
+  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_Positions">from CR2 to CR1</a>, 4 January 2016
+  </li>
   <li style="margin-bottom: 1ex;">Visiting <a href="http://research.microsoft.com/en-us/groups/rise/">MSR Redmond</a> and <a href="https://www.cs.washington.edu/research/plse/people">University of Washington</a>, 10 - 28 August 2015
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://2015.ecoop.org/event/plas-2015-papers-micro-policies-formally-verified-tag-based-security-monitors">Invited talk on Micro-Policies</a> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>, 6 July 2015
