--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="#students">Looking for students and young researchers</a></li>
 
-  <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by MSR</a></li>
+  <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="">
     Symposium on Principles of Programming Languages, POPL 2017</a>
