--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ Research Cambridge</a>.</p>
 
 <h2>Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
-<p><i>Google Maps Address:</i>
-  <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Postal Address:</i>
   <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, 2 rue Simone Iff, 75012 Paris, France</p>
+<p><i>Google Maps Address (address above is so new Google that doesn't know it):</i>
+  <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
 
 <!--
