--- a/index.html
+++ b/index.html
@@ -302,12 +302,14 @@ MPRI website</a>.</p>
     Springer, August 2015.
   </li>
 
+<!--
   <li style="margin-bottom: 1ex;">
   C&#259;t&#259;lin Hri&#355;cu. <b><a href="publications/school2014-siglog.pdf">The Joint EasyCrypt-F*-CryptoVerif School 2014.</a></b> Report appeared in
   <a href="http://siglog.hosting.acm.org/?attachment_id=77">SIGLOG
   Newsletter, Volume 2, Number 1</a>, January 2015.
   </li>
-  
+-->
+
   <li style="margin-bottom: 1ex;">
     Arthur Azevedo de Amorim,
     Maxime Dénès,
@@ -529,7 +531,7 @@ MPRI website</a>.</p>
     <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2018-10:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
     <li style="margin-top: 1ex;">Internship at Inria, 2015-03 to 2015-08:
-      <a href="students/topics/2015/micro-policies-yannis.pdf">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
+      <a href="http://arxiv.org/abs/1510.00697">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
   </li>
