--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="#students">Looking for students and young researchers</a></li>
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for students and young researchers</a></li>
 
   <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li>
 
@@ -132,9 +132,9 @@ Research Cambridge</a>.</p>
   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
 
-<!--
 <h2 id="new-students">Current Research Projects</h2>
--->
+
+<!--
 <h2 id="students">Looking for Students and Young Researchers</h2>
 <p style="width:42em; text-align: left">
 
@@ -142,6 +142,7 @@ We are looking for talented, highly motivated students and young
 researchers, for research internships and for PhD, PostDoc, and
 Researcher positions. Here are three of my projects to which students
 could contribute:
+-->
 
 </p>
 <!--(but there are many other possible ones):--></p>
