--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Research Cambridge</a>.</p>
   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
 
-<h2 id="new-students">Current Research Projects</h2>
+<h2 id="students">Current Research Projects</h2>
 
 <!--
 <h2 id="students">Looking for Students and Young Researchers</h2>
@@ -515,7 +515,7 @@ MPRI website</a>.</p>
   </li>
 </ul>
 
-<h2 id="students">Advised Students</h2>
+<h2 id="old-students">Advised Students</h2>
 
 <p>Here are my current students. For a complete list of past students please look <a href="students.html">here</a>.</p>
 
