--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@ MPRI website</a>.</p>
   </li>
 </ul>
 
-<h2 id="old-students">Advised Students</h2>
+<h2 id="old-students">Currently Advised Students</h2>
 
-<p>Here are my current students. For a complete list of past students please look <a href="students.html">here</a>.</p>
+<p>For a complete list of past students please look <a href="students.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
@@ -561,7 +561,7 @@ Property-Based Testing</a></li>
 
 </ul>
 
-<h2 id="tools">Software tools</h2>
+<h2 id="tools">Software Tools</h2>
 
 <p>Here are my current software projects. For a complete list of past software please look <a href="software.html">here</a>.</p>
 
