--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a>
+  <li style="margin-bottom: 1ex;"><a href="">Diane Gallois-Wong</a>
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Luck: a Language for Effective, Dependable
 Property-Based Testing</a></li>
