--- a/index.html
+++ b/index.html
@@ -125,12 +125,14 @@ Research Cambridge</a>.</p>
 
 <h2>Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
-<p><i>Postal Address:</i>
+<p><i>New address:</i>
   <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>, 2 rue Simone Iff, 75012 Paris, France</p>
-<p><i>Google Maps Address (postal address above is so new Google that
-      doesn't know it):</i><br/>
+<p><i>Google Maps Address (address above is so new Google that doesn't know it):</i><br/>
   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
 <p><i>Office:</i> <strong>C218</strong> (building C, 2nd floor)</p>
+<p><i>Postal address:</i>
+Centre de Recherche Inria de Paris, 2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12</p>
+
 
 <h2 id="students">Current Research Projects</h2>
 
