--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Research Cambridge</a>.</p>
 <p><i>Postal address:</i>
 <a href="http://prosecco.gforge.inria.fr/">Inria Prosecco team</a>,
 Centre de Recherche Inria de Paris,<br/>
-2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12</p>
+2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12, France</p>
 
 
 <h2 id="students">Current Research Projects</h2>
@@ -364,7 +364,7 @@ MPRI website</a>.</p>
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Submitted to Special Issue on Verified Information Flow Security, September 2015.
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue on Verified Information Flow Security, To appear, September 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
   </ul>
