--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ MPRI website</a>.</p>
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue on Verified Information Flow Security, To appear, September 2015.
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue on Verified Information Flow Security. To appear. September 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
   </ul>
