--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Research Cambridge</a>.</p>
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
-  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_Positions">from CR2 to CR1</a>, 4 January 2016
+  <li style="margin-bottom: 1ex;">Leveled up <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research_positions">from CR2 to CR1</a>, 4 January 2016
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://cufp.org/2015/t9-nikhil-swamy-f-star.html">F* tutorial</a> at <a href="http://cufp.org/2015/">CUFP 2015</a>, 4 Sept 2015
   </li>
