--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ Research Cambridge</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://people.csail.mit.edu/adamc/cpp16/">Certified Programs and Proofs, CPP 2016</a> (PC member)
-  <ul>
-    <li>Takes place January 18-19, 2016 in Saint Petersburg, Florida, USA<br/>
-        (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li>
-  <!-- <li>Abstract submission: October 7, 2015</li> -->
-  <!-- <li>Submission deadline: October 14, 2015</li> -->
-  </ul>
+  <!-- <ul> -->
+  <!--   <li>Takes place January 18-19, 2016 in Saint Petersburg, Florida, USA<br/> -->
+  <!--       (collocated with <a href="http://conf.researchr.org/home/POPL-2016">POPL 2016</a>)</li> -->
+  <!-- <\!-- <li>Abstract submission: October 7, 2015</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: October 14, 2015</li> -\-> -->
+  <!-- </ul> -->
   </li>
   <li style="margin-bottom: 1ex;"><a href="http://hatt2016.inria.fr/">Hammers for Type Theories, HaTT 2016</a> (PC member)</li>
   <li style="margin-bottom: 1ex;"><a href="">Workshop on Type-Directed Programming 2016</a> (PC member)</li>
