--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@ MPRI website</a>.</p>
 (also on <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a> and <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;">
+            Yannis Juglaret and
+            C&#259;t&#259;lin Hri&#355;cu and
+            Arthur Azevedo de Amorim and
+            Benjamin C. Pierce and
+            Andrew Tolmach.
+    <b><a href="">
+          Beyond Full Abstraction: Formalizing the Security Guarantees
+                                   of Low-Level Compartmentalization</a></b>.
+    Submitted to CSF, February 2016.
+  </li>
+
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret and
             C&#259;t&#259;lin Hri&#355;cu and
