--- a/publications.html
+++ b/publications.html
@@ -309,11 +309,23 @@
 <ol start="29" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-            Yannis Juglaret and
-            C&#259;t&#259;lin Hri&#355;cu and
-            Arthur Azevedo de Amorim and
-            Benjamin C. Pierce and
-            Antal Spector-Zabusky and
+            Yannis Juglaret,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Arthur Azevedo de Amorim,
+            Benjamin C. Pierce, and
+            Andrew Tolmach.
+    <b><a href="">
+          Beyond Full Abstraction: Formalizing the Security Guarantees
+                                   of Low-Level Compartmentalization</a></b>.
+    Submitted to CSF, February 2016.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Yannis Juglaret,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Arthur Azevedo de Amorim,
+            Benjamin C. Pierce,
+            Antal Spector-Zabusky, and
             Andrew Tolmach.
     <b><a href="http://arxiv.org/abs/1510.00697">
           Towards a Fully Abstract Compiler Using Micro-Policies:
