--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
     Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
-    Antal Spector-Zabusky,-
+    Antal Spector-Zabusky,
     Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. In <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, pages 813-830. IEEE Computer Society, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
@@ -311,9 +311,8 @@
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim,
-            Benjamin C. Pierce, and
-            Andrew Tolmach.
+            Arthur Azevedo de Amorim, and
+            Benjamin C. Pierce.
     <b><a href="">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
