--- a/index.html
+++ b/index.html
@@ -258,9 +258,8 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim,
-            Benjamin C. Pierce, and
-            Andrew Tolmach.
+            Arthur Azevedo de Amorim, and
+            Benjamin C. Pierce.
     <b><a href="">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
