--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ MPRI website</a>.</p>
     <b><a href="">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
-    Submitted to CSF, February 2016.
+    Draft, February 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -333,7 +333,7 @@ MPRI website</a>.</p>
     Nick Giannarakis,
     C&#259;t&#259;lin Hri&#355;cu,
     Benjamin C. Pierce,
-    Antal Spector-Zabusky,-
+    Antal Spector-Zabusky,
     Andrew Tolmach. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a></b>. In <a href="http://www.ieee-security.org/TC/SP2015/">36th IEEE Symposium on Security and Privacy (Oakland S&amp;P)</a>, pages 813-830. IEEE Computer Society, May 2015.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/micro-policies-coq">Coq proofs</a></li>
