--- a/publications.html
+++ b/publications.html
@@ -316,7 +316,7 @@
     <b><a href="">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
-    Submitted to CSF, February 2016.
+    Draft, February 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
