--- a/publications.html
+++ b/publications.html
@@ -312,7 +312,7 @@
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim, and
-            Benjamin C. Pierce.
+            Benjamin C. Pierce.<br/>
     <b><a href="">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
