--- a/index.html
+++ b/index.html
@@ -255,16 +255,16 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
 
-  <!-- <li style="margin-bottom: 1ex;"> -->
-  <!--           Yannis Juglaret, -->
-  <!--           C&#259;t&#259;lin Hri&#355;cu, -->
-  <!--           Arthur Azevedo de Amorim, and -->
-  <!--           Benjamin C. Pierce.<br/> -->
-  <!--   <b><a href=""> -->
-  <!--         Beyond Full Abstraction: Formalizing the Security Guarantees -->
-  <!--                                  of Low-Level Compartmentalization</a></b>. -->
-  <!--   Draft, February 2016. -->
-  <!-- </li> -->
+  <li style="margin-bottom: 1ex;">
+            Yannis Juglaret,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Arthur Azevedo de Amorim, and
+            Benjamin C. Pierce.<br/>
+    <b><a href="publications/beyond-full-abstraction.pdf">
+          Beyond Full Abstraction: Formalizing the Security Guarantees
+                                   of Low-Level Compartmentalization</a></b>.
+    Draft, February 2016.
+  </li>
 
   <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
