--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@ MPRI website</a>.</p>
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim, and
             Benjamin C. Pierce.<br/>
-    <b><a href="publications/beyond-full-abstraction.pdf">
+    <b><a href="http://arxiv.org/abs/1602.04503">
           Beyond Full Abstraction: Formalizing the Security Guarantees
                                    of Low-Level Compartmentalization</a></b>.
-    Draft, February 2016.
+    Draft, arXiv:1602.04503, February 2016.
   </li>
 
   <li style="margin-bottom: 1ex;">
