--- a/students.html
+++ b/students.html
@@ -22,20 +22,22 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="">Diane Gallois-Wong</a>
+<ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="">Diane Gallois-Wong</a> (ENS Paris)
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/luck-diane.pdf">Luck: a Language for Effective, Dependable
 Property-Based Testing</a></li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a>
+  <li style="margin-bottom: 1ex;"><a href="">Alejandro Aguirre</a> (Paris 7)
   <ul>
     <li style="margin-top: 1ex;"><b>Upcoming:</b> Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-alejandro.pdf">F*: Reliable Automatic Proofs and Counterexamples using SMT</a></li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (National University of Rosario)
   <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">Towards F* as a Proof Assistant</a></li>
   </ul>
